@@ -6,7 +6,7 @@
 /*
     CrossFire, A Multiplayer game for X-windows
 
-    Copyright (C) 1994 Mark Wedel
+    Copyright (C) 2000 Mark Wedel
     Copyright (C) 1992 Frank Tore Johansen
 
     This program is free software; you can redistribute it and/or modify
@@ -23,7 +23,7 @@
     along with this program; if not, write to the Free Software
     Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 
-    The author can be reached via e-mail to mark@pyramid.com
+    The author can be reached via e-mail to mwedel@scruz.net
 */
 
 /* This file defines various flags that both the new client and
@@ -155,6 +155,7 @@ enum {a_none, a_readied, a_wielded, a_worn, a_active, a_applied};
 #define CF_FACE_NONE	0
 #define CF_FACE_BITMAP	1
 #define CF_FACE_XPM	2
+#define CF_FACE_PNG	3
 #define CF_FACE_CACHE	0x10
 
 /* Used in the new_face structure on the magicmap field.  Low bits
